<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Escode</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Escode</string>

    <string name="about_text">ESCODE is an educational Escape Room Game. You learn the differences between Java and Kotlin through various kind of puzzles! \n\n
        Currently there is only one kind of puzzle implemented - a simple multiple-choice puzzle :D </string>
    <string name="rules_text">It is a simple multiple-choice puzzle. \n\n1 Question, 4 Answers.\n\nTo make it more exciting.... You have three HEARTS! \n
        Every time you get a question wrong you loose one heart. At the end of a level and entire game round you will see how many Hearts you have saved. \nYou
        can compare yourself with the others in the scoreboard :))) \n\nCan you beat all of them?
        answer correct, you advance to the next question.\n\nEvery time you get a question wrong, you will loose one heart of
        You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>

    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Escode (Q %1$d/%2$d, L %3$d/%4$d)</string>
    <string name="title_about_escode">About Escode</string>
    <string name="title_escode_rules">Escode Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="ButtonContinue">Continue</string>
    <string name="titleGame">Escode</string>
    <string name="buttonScoreboard">Scoreboard</string>
    <string name="buttonNewGame">Start New Game</string>
    <string name="palmTree">palmtree</string>

    <string name="popTitle_level">Congratulation!</string>
    <string name="popText_level">You got %1$d/%2$d Questions correct!</string>
    <string name="popBtn_next">Next</string>
    <string name="popBtn_scores">Scoreboard</string>
    <string name="popBtn_home">Home</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Toast Messages for Feedback -->
    <string name="fb_wrong">Wrong! Please try again</string>
    <string name="fb_noChoice">Please choose an answer!</string>
    <string name="fb_correct">Correct!</string>
    <string name="fb_nonExistent">in next Update !!</string>
    <string name="aboutTitle">About</string>
    <string name="rulesTitle">Rules</string>
    <string name="popBtn_again">Try Again</string>

</resources>
