<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.escode.game.GameDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/popup"
        android:padding="10sp">

        <TextView
            android:id="@+id/popTitle"
            style="@style/stylePopTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pop_margin"
            android:layout_marginTop="@dimen/pop_margin"
            android:layout_marginEnd="@dimen/pop_margin"
            android:layout_marginBottom="@dimen/pop_marginButtom"
            android:text="@string/popTitle_level"
            app:layout_constraintBottom_toTopOf="@+id/popText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/popText"
            style="@style/stylePopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pop_margin"
            android:layout_marginTop="@dimen/pop_marginButtom"
            android:layout_marginEnd="@dimen/pop_margin"
            android:layout_marginBottom="@dimen/pop_margin"
            android:fontFamily="@font/f_consolas"
            android:gravity="center"
            android:text="@string/popText_level"
            app:layout_constraintBottom_toTopOf="@id/pop_btn2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popTitle" />

<!--        <fragment-->
<!--            android:id="@+id/scoreboard_mini"-->
<!--            android:name="com.example.android.escode.game.ScoreboardFragment_mini"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/popText" />-->

        <ImageButton
            android:id="@+id/pop_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pop_marginButtom"
            android:layout_marginLeft="@dimen/pop_margin"
            android:layout_marginRight="@dimen/pop_margin"
            android:layout_marginBottom="@dimen/pop_margin"
            android:background="@drawable/a_btn_enabled"
            android:contentDescription="@+id/pop_btn3"
            android:fontFamily="@font/codefont"
            android:text="@string/popBtn_next"
            android:textSize="@dimen/button_general_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pop_btn2"
            app:layout_constraintTop_toBottomOf="@id/pop_btn2"
            app:srcCompat="@drawable/a_arrow" />

        <ImageButton
            android:id="@+id/pop_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pop_marginButtom"
            android:layout_marginLeft="@dimen/pop_margin"
            android:layout_marginRight="@dimen/pop_margin"
            android:layout_marginBottom="@dimen/pop_margin"
            android:background="@drawable/a_btn_enabled"
            android:contentDescription="@+id/pop_btn1"
            android:fontFamily="@font/codefont"
            android:text="@string/popBtn_home"
            android:textSize="@dimen/button_general_text_size"
            app:layout_constraintEnd_toStartOf="@+id/pop_btn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pop_btn2"
            app:srcCompat="@drawable/ic_home_white" />

        <Button
            android:id="@+id/pop_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pop_margin"
            android:layout_marginTop="@dimen/pop_margin"
            android:layout_marginEnd="@dimen/pop_margin"
            android:fontFamily="@font/codefont"
            android:text="@string/popBtn_scores"
            android:textSize="@dimen/button_general_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>