<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_root"
    app:startDestination="@+id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.android.escode.game.TitleFragment"
        android:label="@string/android_trivia"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_titleFragment_to_scoreboardFragment"
            app:destination="@id/scoreboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.android.escode.game.GameFragment"
        android:label="@string/android_trivia"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_titleFragment"
            app:destination="@id/titleFragment" />

        <action
            android:id="@+id/action_gameFragment_to_game_LevelDialogFragment"
            app:destination="@id/game_LevelDialogFragment" />
        <action
            android:id="@+id/action_gameFragment_to_game_EndDialogFragment"
            app:destination="@id/game_EndDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.example.android.escode.game.RulesFragment"
        android:label="@string/title_escode_rules"
        tools:layout="@layout/fragment_rules" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.android.escode.game.AboutFragment"
        android:label="@string/title_about_escode"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/game_LevelDialogFragment"
        android:name="com.example.android.escode.game.Game_LevelDialogFragment"
        android:label="fragment_game_dialog"
        tools:layout="@layout/fragment_game_level_dialog" >
        <action
            android:id="@+id/action_gameDialogFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
        <action
            android:id="@+id/action_gameDialogFragment_to_scoreboardFragment"
            app:destination="@id/scoreboardFragment" />
        <action
            android:id="@+id/action_gameDialogFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>

    <fragment
        android:id="@+id/scoreboardFragment"
        android:name="com.example.android.escode.game.ScoreboardFragment"
        android:label="ScoreboardFragment" >
        <action
            android:id="@+id/action_scoreboardFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>

    <fragment
        android:id="@+id/game_EndDialogFragment"
        android:name="com.example.android.escode.game.Game_EndDialogFragment"
        android:label="fragment_game_end_dialog"
        tools:layout="@layout/fragment_game_end_dialog"
        app:startDestination="@id/action_game_EndDialogFragment_to_gameFragment">
        <action
            android:id="@+id/action_game_EndDialogFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
        <action
            android:id="@+id/action_game_EndDialogFragment_to_scoreboardFragment"
            app:destination="@id/scoreboardFragment" />
        <action
            android:id="@+id/action_game_EndDialogFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>

</navigation>